--- a/duo_app/templates/duo_login.html
+++ b/duo_app/templates/duo_login.html
@@ -3,7 +3,6 @@
 {% block head %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="stylesheet" type="text/css" href="{{ duo_css_src }}">
 {% endblock %}
 
 {% block content %}
@@ -28,9 +27,10 @@ if(ifm != null && subWeb != null) {
 }   
 }   
 </script>
-
+<div style="text-align: center">
 <iframe id="duo_iframe"
         title="Two-Factor Authentication"
+        style="width:700px; height:500px;"
         frameborder="0"
         scrolling="no" 
         marginheight="0" 
@@ -38,9 +38,8 @@ if(ifm != null && subWeb != null) {
         data-host="{{ duo_host }}"
         data-sig-request="{{ sig_request }}"
         data-post-action="{{ post_action }}"
-        onLoad="iFrameHeight()"
         >
 </iframe>
-
+</div>
 {% endblock %}
 
