--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -2,20 +2,17 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <link rel="stylesheet" href="style.css" />
+	<meta charset="utf-8">
+	{% load static %}
+		<script src="{% static "jquery-1.9.1.js" %}"></script>
+		<link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
+		<script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+	</head>
     <title>{% block title %}My amazing site{% endblock %}</title>
     {% block head %}{% endblock %}
 </head>
 
-<body>
-    <div id="sidebar">
-        {% block sidebar %}
-        <ul>
-            <li><a href="/">Home</a></li>
-        </ul>
-        {% endblock %}
-    </div>
-
+<body style="background-color: #f9f9f9">
     <div id="content">
         {% block content %}{% endblock %}
     </div>
